--- a/crisis/code/research_question/ResearchQuestions.ipynb
+++ b/crisis/code/research_question/ResearchQuestions.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "026f67c7-52a8-4ac2-aee3-a51a66205fbf",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "90625403-278c-4dc2-9fe0-58b94f1d39f4",
    "metadata": {},
    "outputs": [],
@@ -61,22 +61,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "5d1199ce-0628-4010-8e96-a619c5191d1c",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'list_doi' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m rows1 = []    \u001b[38;5;66;03m#DF outgoing cit\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m doi \u001b[38;5;129;01min\u001b[39;00m \u001b[43mlist_doi\u001b[49m:\n\u001b[32m      4\u001b[39m     outgoing_cit= \u001b[38;5;28mlist\u001b[39m()\n\u001b[32m      5\u001b[39m     outgoing_oci = \u001b[38;5;28mset\u001b[39m() \n",
-      "\u001b[31mNameError\u001b[39m: name 'list_doi' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#creating DF for outgoing cit\n",
     "rows1 = []    \n",
@@ -102,25 +90,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "bfabcecf-15e1-425e-95ab-511253db795d",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'list_doi' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m rows2 = []   \u001b[38;5;66;03m#DF ingoing cit\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m doi \u001b[38;5;129;01min\u001b[39;00m \u001b[43mlist_doi\u001b[49m:\n\u001b[32m      4\u001b[39m     ingoing_cit= \u001b[38;5;28mlist\u001b[39m()\n\u001b[32m      5\u001b[39m     ingoing_oci = \u001b[38;5;28mset\u001b[39m() \n",
-      "\u001b[31mNameError\u001b[39m: name 'list_doi' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#creating DF for ingoing cit\n",
-    "rows2 = []   \n",
+    "rows2 = []  \n",
     "\n",
     "for doi in list_doi:\n",
     "    ingoing_cit= list()\n",
@@ -148,12 +124,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#merge to a single DF and export csv\n",
-    "from IPython.display import FileLink\n",
+    "#merge to a single DF and export resaults in csv\n",
     "\n",
     "output = pd.merge(output_table1, output_table2, on='doi', how=\"outer\")\n",
-    "output.to_csv(\"CitationsCount\", index=False)\n",
-    "Filelink(\"CitationsCount\")"
+    "output.to_csv(\"../research_question/CitationsCount.csv\", index=False)\n"
    ]
   }
  ],
