Updated shw extraction script
Fixed the way the script handles stopping and resuming

--- a/crisis/code/swh/swh_data_extraction.ipynb
+++ b/crisis/code/swh/swh_data_extraction.ipynb
@@ -162,9 +162,6 @@
     "        continue\n",
     "    url = entry.get('url')\n",
     "    print(f\"\\n[{idx}/{len(origins)}] Checking {url}\")\n",
-    "    last_idx = idx\n",
-    "    with open(PROCESSED_FILE, \"w\", encoding=\"utf-8\") as f:\n",
-    "        json.dump({\"last_index\": last_idx}, f)\n",
     "\n",
     "    if not url:\n",
     "        continue\n",
@@ -251,7 +248,11 @@
     "    else:\n",
     "        print(\" → not UNIBO, skip\")\n",
     "\n",
-    "print(f\"\\nFiltering done: {len(confirmed)} confirmed repos.\")"
+    "    # write checkpoint ONLY after fully processing item\n",
+    "    with open(PROCESSED_FILE, \"w\", encoding=\"utf-8\") as f:\n",
+    "        json.dump({\"last_index\": idx}, f)\n",
+    "\n",
+    "print(f\"\\nFiltering done: {len(confirmed)} confirmed repos.\")\n"
    ]
   }
  ],
